SERVER-51775 Failpoint to disable periodic uptime reporter thread should instead just disable uptime reporting