jstests/sharding/lagged_config_secondary.js
@@ -20,15 +20,13 @@ TestData.skipCheckOrphans = true;
  * concern. For more deterministic testing of no-op writes to the oplog, disable uptime reporter
  * threads from reaching out to the config server.
  */
+const shardingUptimeFailpointName = jsTestOptions().mongosBinVersion == 'last-lts'
+    ? "failpoint.disableShardingUptimeReporterPeriodicThread"
+    : "failpoint.disableShardingUptimeReporting";
 var st = new ShardingTest({
     shards: 1,
     configReplSetTestOptions: {settings: {chainingAllowed: false}},
-    other: {
-        mongosOptions: {
-            setParameter:
-                {"failpoint.disableShardingUptimeReporterPeriodicThread": "{mode: 'alwaysOn'}"}
-        }
-    }
+    other: {mongosOptions: {setParameter: {[shardingUptimeFailpointName]: "{mode: 'alwaysOn'}"}}}
 });
 
 var testDB = st.s.getDB('test');
